public/css/style.css
body {
    background-color: #171822;
    height: 100vh; /* Full viewport height */
}

/* CSS for the left side panel showing user requests */
#request-panel {
    height: 91.7vh;
    background-color: #212330;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    margin-top: 4.15%;
    border-color: #3EB489;
    border-right-color: #C0C0C0;
    border-width: 1px;
    border-bottom-style: solid;
    border-right-style: solid ;
    border-top-style: solid;
    overflow-y: auto;
}

.request-item {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 5px;
    cursor: pointer;
    background-color: transparent;
    transition: background-color 0.3s ease;
    width: 100%;
}

/* generic request hover effect */
.request-item:hover:not(.nested-items) {
    background-color: rgba(240, 240, 240, 0.2);
}

/* General hover effect for the .request folder (parent) */
.request-item:hover {
    background-color: rgba(240, 240, 240, 0.2); /* Only applies to folder */
}

/* Exclude .nested-items from inheriting the background-color */
.nested-items {
    background-color: transparent;
}

.request-type-get {
    color: #34C759;
}

.request-type-post {
    color: #FF9500;
}

.request-type-put {
    color: #FFCC00;
}

.request-type-patch {
    color: #5856D6;
}

.request-type-delete {
    color: #FF3B30;
}

.request-type-head {
    color: #AF52DE;
}

.request-type-options {
    color: #5AC8FA;
}

/* CSS for the top right side panel where users make/edit requests */
#request-making-panel {
    background-color: #212330;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    margin-top: 5%;
    border-color: #3EB489;
    border-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: #C0C0C0;
    border-right-style: solid;
    border-top-style: solid;
}

#response-panel {
    background-color: #212330;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    border-color: #3EB489;
    border-width: 1px;
    border-bottom-style: solid;
    border-right-style: solid;
    border-top-style: solid;
    border-top-color: #C0C0C0;
}

/* CSS related to request content */
.is-hidden {
    display: none;
}

/* hide the dropdown by default */
.dropdown {
    display: none;
}

/* make the dropdown appear for folder and request elements using the div with toggle class */
.folder-toggle:hover .dropdown,
.request-toggle:hover .dropdown {
    display: block;
}

/* Ensure that nested-items don't inherit the hover or clicked state from their parent */
.nested-items .dropdown-options {
    display: none;
}

.clicked {
    background-color: rgba(120, 120, 120, 0.4); /* Stay highlighted */
}

/* Muuri Styling */
.grid {
    position: relative;
}

.item {
    position: absolute;
    z-index: 1;
}

.item.muuri-item-dragging {
    z-index: 3;
}

.item.muuri-item-releasing {
    z-index: 2;
}

.item.muuri-item-hidden {
    z-index: 0;
}

.item-content {
    position: relative;
    width: 100%;
    height: 100%;
}

.muuri-item {
    width: 100%;
}

